Fix some pmd warnings.